--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
+    "script-ext-html-webpack-plugin": "^1.8.5",
+    "webpack": "^3.6.0",
     "workbox-webpack-plugin": "^2.1.0"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^4.1.1"
   }
 }
